--- a/compose.yaml
+++ b/compose.yaml
@@ -2,8 +2,8 @@ services:
   postgres:
     image: 'postgres:latest'
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      - 'POSTGRES_DB=portfolio'
+      - 'POSTGRES_PASSWORD=local'
+      - 'POSTGRES_USER=local'
     ports:
-      - '5432'
+      - '5432:5432'
