refactor resource files and add test properties

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -5,6 +5,8 @@ spring:
     password: local
     driver-class-name: org.postgresql.Driver
 
-logging:
-  level:
-    dev.eduardobarbosa: DEBUG
+dev:
+  eduardobarbosa:
+    auth:
+      usr: test
+      pwd: 1234
