--- a/build.gradle
+++ b/build.gradle
@@ -41,11 +41,46 @@ dependencies {
 
 tasks.withType(KotlinCompile) {
     kotlinOptions {
-        freeCompilerArgs += '-Xjsr305=strict'
-        jvmTarget = '17'
+        freeCompilerArgs += "-Xjsr305=strict"
+        jvmTarget = "17"
     }
 }
 
-tasks.named('test') {
-    useJUnitPlatform()
+tasks.register('integrationTest', Test) {
+    description = "Runs integration tests."
+    group = "verification"
+}
+
+tasks.register('acceptanceTest', Test) {
+    description = "Runs acceptance tests."
+    group = "verification"
+}
+
+tasks.test {
+    useJUnitPlatform {
+        excludeTags("IntegrationTest")
+        excludeTags("AcceptanceTest")
+        includeTags("UnitTest")
+    }
+}
+
+tasks.acceptanceTest {
+    useJUnitPlatform {
+        excludeTags("IntegrationTest")
+        includeTags("AcceptanceTest")
+        excludeTags("UnitTest")
+    }
+}
+
+tasks.integrationTest {
+    useJUnitPlatform {
+        includeTags("IntegrationTest")
+        excludeTags("AcceptanceTest")
+        excludeTags("UnitTest")
+    }
+}
+
+tasks.check {
+    dependsOn integrationTest
+    dependsOn acceptanceTest
 }
