--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.testcontainers:postgresql'
+    testImplementation 'io.rest-assured:rest-assured:5.3.2'
+    testImplementation 'io.mockk:mockk:1.13.8'
+    testImplementation 'org.skyscreamer:jsonassert:1.5.1'
 }
 
 tasks.withType(KotlinCompile) {
