--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -4,6 +4,8 @@ spring:
     username: local
     password: local
     driver-class-name: org.postgresql.Driver
+  flyway:
+    clean-disabled: false
 
 dev:
   eduardobarbosa:
