--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ plugins {
     id 'org.jetbrains.kotlin.plugin.spring' version '1.9.20'
 }
 
+apply plugin: 'java-library'
+apply plugin: 'java-test-fixtures'
+
 group = 'dev.eduardobarbosa'
 version = '0.0.1-SNAPSHOT'
 
@@ -41,6 +44,8 @@ dependencies {
     testImplementation 'io.rest-assured:rest-assured:5.3.2'
     testImplementation 'io.mockk:mockk:1.13.8'
     testImplementation 'org.skyscreamer:jsonassert:1.5.1'
+
+    testFixturesImplementation 'com.github.javafaker:javafaker:1.0.2'
 }
 
 tasks.withType(KotlinCompile) {
