--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -7,6 +7,11 @@ spring:
   flyway:
     clean-disabled: false
 
+logging:
+  level:
+    com.barbzdev: debug
+    web: debug
+
 com:
   barbzdev:
     auth:
