--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,11 +48,19 @@ jobs:
           java-version: 17
           distribution: 'adopt'
 
+      - name: Start containers 🐋
+        run: docker-compose up -d
+
       - name: Grant execute permissions to gradlew
         run: chmod +x ./gradlew
 
       - name: Run integration test
         run: ./gradlew clean integrationTest --stacktrace --no-configuration-cache
+
+      - name: Stop containers 🐋
+        if: always()
+        run: docker-compose down
+
   acceptance-test:
     name: Acceptance test
     runs-on: ubuntu-latest
@@ -70,8 +78,15 @@ jobs:
           java-version: 17
           distribution: 'adopt'
 
+      - name: Start containers 🐋
+        run: docker-compose up -d
+
       - name: Grant execute permissions to gradlew
         run: chmod +x ./gradlew
 
       - name: Run acceptance test
         run: ./gradlew clean acceptanceTest --stacktrace --no-configuration-cache
+
+      - name: Stop containers 🐋
+        if: always()
+        run: docker-compose down
