--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -76,7 +76,7 @@ jobs:
       - name: Run acceptance test
         run: ./gradlew clean acceptanceTest --stacktrace --no-configuration-cache
   build:
-    name: Acceptance test
+    name: Build
     runs-on: ubuntu-latest
     needs:
       - acceptance-test
