--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -66,8 +66,10 @@ jobs:
 
       - name: Run acceptance test
         run: ./gradlew clean acceptanceTest --stacktrace --no-configuration-cache
+
   build:
-    name: Build
+    if: ${{ github.ref == 'refs/heads/main' }}
+    name: Build and push to Docker Hub 🐋
     runs-on: ubuntu-latest
     needs:
       - acceptance-test
@@ -86,4 +88,54 @@ jobs:
       - name: Grant execute permissions to gradlew
         run: chmod +x ./gradlew
 
-      #WIP
+      - name: Build
+        run: ./gradlew build --exclude-task acceptanceTest --exclude-task integrationTest --exclude-task test
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Dashboard to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build image and push to Docker Hub 🐋
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: Dockerfile
+          push: true
+          args: |
+            DB_USERNAME=${{ secrets.DB_USERNAME }}
+            DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+            AUTH_USR=${{ secrets.AUTH_USERNAME }}
+            AUTH_PWD=${{ secrets.AUTH_PASSWORD }}
+          tags: baaarbz/portfolio-api:latest
+
+  deploy:
+    if: ${{ github.ref == 'refs/heads/main' }}
+    name: Deploy 🚀
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Add Server key
+        run: |
+          touch key.txt && echo "${{ secrets.SERVER_KEY }}" > key.txt
+          chmod 600 key.txt
+
+      - name: Deploy the application 🚀
+        env:
+          SERVER_HOST: ${{ secrets.SERVER_HOST }}
+          SERVER_USER: ${{ secrets.SERVER_USER }}
+        run: |
+          chmod +x deploy.sh
+          set -e
+          ./deploy.sh
