fix db connection production

--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://postgres:5432/portfolio
+    url: jdbc:postgresql://localhost:5432/portfolio
     username: {{db_username}}
     password: {{db_password}}
     driver-class-name: org.postgresql.Driver
