add rm container

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -131,5 +131,6 @@ jobs:
           script: |
             docker stop portfolio-api
             docker rmi baaarbz/portfolio-api
+            docker rm portfolio-api
             docker pull baaarbz/portfolio-api:latest
             docker run -d -p 8000:8000 -e DB_USERNAME=${{ secrets.DB_USERNAME }} -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} -e AUTH_USR=${{ secrets.AUTH_USERNAME }} -e AUTH_PWD=${{ secrets.AUTH_PASSWORD }} --restart always --name portfolio-api baaarbz/portfolio-api:latest
