--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -109,7 +109,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build
-        run: ./gradlew build --exclude-task acceptanceTest --exclude-task integrationTest --exclude-task test
+        run: ./gradlew build --exclude-task acceptanceTest --exclude-task integrationTest --exclude-task test --exclude-task architectureTest
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
