--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,8 @@ management:
     web:
       exposure:
         include: openapi, swagger-ui
+
+logging:
+  level:
+    com.barbzdev: debug
+    web: debug
