feature: add extra configuration for flyway

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,10 @@ server:
 springdoc:
   show-actuator: true
 
+spring:
+  flyway:
+    baselineOnMigrate: true
+
 management:
   endpoints:
     web:
